[gd_scene load_steps=7 format=2]

[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="FontFile" id=1]
[ext_resource path="res://assets/tokens/blue.svg" type="Texture2D" id=2]
[ext_resource path="res://src/core/Token.gd" type="Script" id=3]

[sub_resource type="FontFile" id=1]
size = 14
font_data = ExtResource( 1 )

[sub_resource type="FontFile" id=2]
size = 19
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="FontFile" id=3]
size = 32
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 1 )

[node name="Token" type="HBoxContainer"]
offset_right = 50.0
offset_bottom = 50.0
mouse_filter = 2
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="VBoxContainer" parent="."]
visible = false
offset_right = 22.0
offset_bottom = 52.0

[node name="Add" type="Button" parent="Buttons"]
offset_right = 22.0
offset_bottom = 24.0
mouse_filter = 1
theme_override_fonts/font = SubResource( 1 )
text = "+"

[node name="MarginContainer" type="MarginContainer" parent="Buttons"]
visible = false
offset_top = 34.0
offset_right = 25.0
offset_bottom = 36.0
mouse_filter = 1
size_flags_vertical = 3

[node name="Remove" type="Button" parent="Buttons"]
offset_top = 28.0
offset_right = 22.0
offset_bottom = 52.0
mouse_filter = 1
theme_override_fonts/font = SubResource( 1 )
text = "-"

[node name="Name" type="Label" parent="."]
visible = false
offset_top = 14.0
offset_right = 125.0
offset_bottom = 38.0
mouse_filter = 1
theme_override_fonts/font = SubResource( 2 )
text = "Token Name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
visible = false
offset_left = 129.0
offset_right = 155.0
offset_bottom = 52.0
mouse_filter = 1
size_flags_horizontal = 3

[node name="CenterContainer" type="CenterContainer" parent="."]
offset_right = 50.0
offset_bottom = 50.0
mouse_filter = 1

[node name="TokenIcon" type="TextureRect" parent="CenterContainer"]
offset_right = 50.0
offset_bottom = 50.0
size_flags_vertical = 3
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Count" type="Label" parent="CenterContainer"]
offset_left = 13.0
offset_top = 5.0
offset_right = 36.0
offset_bottom = 44.0
mouse_filter = 1
theme_override_fonts/font = SubResource( 3 )
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Buttons/Add" to="." method="_on_Add_pressed"]
[connection signal="pressed" from="Buttons/Remove" to="." method="_on_Remove_pressed"]
